2015-02-06  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/arm/sysdep.h [!PROF] [ARCH_HAS_T2 && !PIC] (LDR_GLOBAL):
	Use sfi_breg on ldr.
	[!PROF] [ARCH_HAS_T2 && PIC && ARM_PCREL_MOVW_OK] (LDR_GLOBAL):
	Likewise.

	* nptl/tst-cancel25.c (tf2): Test for SIGCANCEL being blocked only if
	it's defined.
	* nptl/tst-signal7.c (do_test): Test SIGCANCEL only if it's defined.
	Test SIGSETXID only if it's defined.

	* nptl/tst-locale1.c (useless): Use SIGRTMIN only if it's defined.

	* rt/tst-timer2.c (do_test): Don't initialize SIGEV.sigev_signo, which
	will not be used.  Use NULL rather than 0 for .sigev_notify_attributes.

	* nptl/tst-align2.c: Moved ...
	* sysdeps/unix/sysv/linux/tst-align-clone.c: ... here.
	* nptl/Makefile (tests): Remove tst-align2.
	* sysdeps/unix/sysv/linux/Makefile
	[$(subdir) = nptl] (tests): Add tst-align-clone.
	* nptl/tst-getpid1.c: Moved ...
	* sysdeps/unix/sysv/linux/tst-getpid1.c: ... here.
	* nptl/tst-getpid2.c: Moved ...
	* sysdeps/unix/sysv/linux/tst-getpid2.c: ... here.
	* nptl/Makefile (tests): Move tst-getpid1 and tst-getpid2 ...
	* sysdeps/unix/sysv/linux/Makefile
	[$(subdir) = nptl] (tests): ... here.
	* nptl/Makefile (tst-getpid2-ENV): Move variable ...
	* sysdeps/unix/sysv/linux/Makefile
	[$(subdir) = nptl] (tst-getpid2-ENV): ... here.

	* nptl/tst-cleanup2.c (do_test): Use signal rather than sigaction.
	Drop trailing \n from perror argument.  Use return rather than exit.

	* nptl/tst-cancel20.c (do_test): Conditionalize SA_SIGINFO-using tests
	on [SA_SIGINFO].
	* nptl/tst-cancel21.c (do_test): Likewise.
	* debug/tst-backtrace6.c: Include <signal.h> first thing.
	Conditionalize inclusion of tst-backtrace5.c on [SA_SIGINFO].
	[!SA_SIGINFO]: Make it a stub test.

	* misc/tst-pselect.c (do_test): Don't set SA_NOCLDWAIT in sa_flags for
	SIGCHLD; it's redundant	with SIG_IGN as sa_handler.

	* posix/tst-getlogin.c: Move to ...
	* login/tst-getlogin.c: ... here.
	* posix/Makefile (tests): Move tst-getlogin to ...